--- a/public/css/home.css
+++ b/public/css/home.css
@@ -62,6 +62,7 @@ img{
 }
 .inner {
 	max-width: 73.125rem;
+	width: 100%;
 	margin: auto;
 }
 /*===== CLASS CSS =====*/
@@ -242,6 +243,7 @@ h1.title {
 	height: 1.75rem;
 	text-align: center;
 	margin-left: auto;
+	overflow: hidden;
 }
 .m-card-detail a {
 	font-size: var(--smallest-font-size);
@@ -287,13 +289,8 @@ h1.title {
 	bottom: 0.75rem;
 	right: 0.75rem;
 }
-.customer-content .content-body {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 0.8125rem;
-}
 .m-card.customer{
-	height: 10.5625rem;
+	max-height: 10.5625rem;
 	position: relative;
 }
 .m-card.customer .customer-content {
@@ -302,15 +299,26 @@ h1.title {
 	font-size: 0.875rem;
 	line-height: 1rem;
 	font-weight: 500;
-	position: absolute;
-    bottom: 0;
+    bottom: -0.75rem;
     width: 100%;
+}
+.customer-content .content-body {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 0.75rem;
+	grid-row-gap: 0.75rem;
+}
+.m-card.customer .customer-img {
+	padding: 1rem;
+}
+.m-card.customer .customer-img img {		
+	max-height: 6.125rem;
 }
 .content-header {
 	display: flex;
 }
 /*=== FOOTER ===*/
-footer {
+.footer {
 	background-color: #0E418A;
 	padding-left: 0.75rem;
 	padding-right: 1.5625rem;
@@ -367,6 +375,7 @@ footer {
 	font-size: var(--smaller-font-size);
 	padding: 0.75rem;
 }
+
 /*=== Show menu ===*/
 .show{
   left: 0;
@@ -424,13 +433,129 @@ footer {
 	.content-header p {
 		border-bottom: 1px solid var(--blue);
 	}
+	.content-header .all {
+		position: absolute;
+		right: 0;
+		font-size: var(--smaller-font-size);
+		line-height: 2rem;
+	}
 	.content-header {
 		margin-top: 2.8rem;
 		margin-bottom: 1rem;
+		position: relative;
 	}
-	.content-body {
+	.service-content .content-body, .mobile-service-content .content-body {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 1.875rem;
+	}
+	.events-content .content-body {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-column-gap: 3.375rem;
+		grid-row-gap: 1rem;
+	}
+	.m-card.events {
+		grid-row-start: 1;
+		grid-row-end: 4; 
+	}
+	.m-card.event-nd {
+		margin-top: 0;
+	}
+	.customer-content .content-body {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-column-gap: 3.5rem;
+	}
+	.m-card.customer {
+		max-height: 17.8rem;
+		height: 100%;
+	}
+	.m-card.customer .customer-img {
+		padding: 1.75rem 1.125rem;
+	}
+	.m-card.customer .customer-img img {		
+		max-height: 9.6rem;
+	}
+	.m-card.customer .customer-content {
+		margin-bottom: 1.5rem;
+		padding: 0;
+		position: relative;
+	}
+	.mobile-service-content, .service-content, .events-content, .customer-content {
+		padding: 0;
+	}
+	.footer {
+		margin-top: 4.5rem;
+		padding: 0;
+		padding-top: 1.8125rem;
+		display: flex;
+	}
+	.footer-row.is-desktop {
+		display: flex;
+		flex-direction: row;
+		color: #BDD3F2;
+		justify-content: space-between;
+		width: 100%;
+		padding-bottom: 4rem;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+	}
+	.footer-column-first .column-item-first {
+		color: white;
+		font-weight: 500;
+		font-size: 1.25rem;
+		line-height: 2rem;
+		padding-top: 1.5rem;
+	}
+	.footer-column-first a {
+		color: #BDD3F2;
+		font-size: 1rem;
+		line-height: 1.5rem;		
+		padding-top: 0.5rem;
+		font-weight: 400;
+	}
+	.footer-column .column-item-first {
+		color: white;
+		font-weight: 500;
+		font-size: 1.25rem;
+		line-height: 2rem;
+		padding-top: 1.5rem;
+	}
+	.column-item-first {
+		padding-bottom: 0.75rem;
+	}
+	.footer-column a {
+		color: #BDD3F2;
+		font-size: 1rem;
+		line-height: 1.5rem;
+		padding-top: 0.5rem;
+		font-weight: 400;
+	}
+	.social-media .icon {
+		width : 1.5rem;
+		padding-top: 4rem;
+	}
+	.footer-row-mobile {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: space-between;
+		margin-top: 0.5rem;
+		margin-bottom: 3.1275rem;
+	}
+	.footer-row-mobile .right {
+		max-width: 28rem;
+		width: 100%;
+	}
+	.footer-row .sign {
+		font-weight: 400;
+		line-height: 1.3125rem;
+		font-size: 1rem;
+	}
+	.footer-img img {
+		height: 1.125rem;
+		float: right;
+	}
+	.footer-row .info {
+		font-size: 1rem;
 	}
 }
